# tiger-rs

./: .gitignore  Cargo.toml  README.md
bin_test/: test.sh  test1.tig  (+1 more)
compiler/: Cargo.toml  Makefile.toml  build.rs
compiler-lib/: Cargo.toml  Makefile.toml
compiler-lib/src/: asm.rs  lib.rs  main.rs
compiler-lib/src/codegen/: color.rs  mod.rs
compiler-lib/src/codegen/aarch64_apple_darwin/: frame.rs  mod.rs
compiler-lib/src/codegen/x86_64_apple_darwin/: frame.rs  mod.rs
compiler-lib/src/codegen/x86_64_linux_gnu/: frame.rs  mod.rs
compiler-lib/src/common/: temp.rs
compiler-lib/src/ir/: mod.rs
compiler-lib/src/parser/: mod.rs
compiler-lib/src/semant/: hir.rs
compiler-lib/tests/: index.html  integration_test.rs
compiler-lib/tests/testfiles/: test10.tig  test12.tig  test22.tig  test24.tig  test31.tig  test36.tig  test37.tig  test38.tig  test39.tig  test49.tig  test50.tig  test7.tig
compiler/bin_test/: test.sh  test11.tig  test13.tig  test14.tig  test16.tig  test17.tig  test18.tig  test19.tig  test23.tig  test25.tig  test26.tig  test27.tig  test28.tig  test29.tig  test3.tig  test30.tig  test32.tig  test33.tig  test34.tig  test35.tig  test40.tig  test45.tig  test48.tig  test6.tig  test8.tig  test9.tig
compiler/bin_test/wasm/: index.html  test.js
compiler/src/: lib.rs  main.rs
compiler/src/codegen/: color.rs  flow.rs  mod.rs  reg_alloc.rs
compiler/src/common/: position.rs  symbol.rs  temp.rs
compiler/src/ir/: mod.rs
compiler/src/lexer/: error.rs  lex.rs  token.rs
compiler/src/parser/: grammar.lalrpop
compiler/src/semant/: builtin.rs  ctx.rs  env.rs  escape.rs  hir.rs  mod.rs  translate.rs  types.rs
compiler/src/wasm/: ast.rs  builtin.rs  encode.rs  frame.rs  mod.rs  rewrite.rs  translate.rs  watencoder.rs
compiler/testcases/: README.md
compiler/tests/: integration_test.rs  test.js
compiler/tests/testfiles/: test15.tig  test20.tig  test21.tig  test41.tig  test46.tig  test47.tig  test5.tig  test6.tig
tiger/: .gitignore  Cargo.toml
tiger/src/: asm.rs  canon.rs  env.rs  escape.rs  frame.rs  ir.rs  lib.rs  main.rs  position.rs  semant.rs  symbol.rs  temp.rs  translate.rs  types.rs
tiger/src/codegen/: arm64.rs  asm.rs  color.rs  flow.rs  graph.rs  liveness.rs  mod.rs  reg_alloc.rs
tiger/src/common/: mod.rs  temp.rs
tiger/src/frame/: arm64.rs  mod.rs  x86.rs
tiger/src/ir/: canon.rs  mod.rs
tiger/src/lexer/: lex.rs  mod.rs  token.rs
tiger/src/parser/: ast.rs  grammar.lalrpop  mod.rs
tiger/src/semant/: env.rs  escape.rs  mod.rs  semant.rs  translate.rs
(+80 files in other folders)
