[package]
name = "tiger"
version = "0.1.0"
edition = "2021"
default-run = "tiger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
lalrpop-util = "0.19.7"
anyhow = "1.0.56"
once_cell = "1.10.0"
itertools = "0.10.3"

[build-dependencies] 
lalrpop = "0.19.7"
