[package]
name = "tiger"
version = "0.1.0"
edition = "2021"
default-run = "tiger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"
lalrpop-util = "0.20.0"
anyhow = "1.0.71"
once_cell = "1.18.0"
itertools = "0.10.5"
leb128 = "0.2.5"
macros = { path = "../macros" }

[build-dependencies] 
lalrpop = "0.20.0"

# standard crate data is left out
[dev-dependencies]
anyhow = "1.0.71"
rayon = "1.7.0"
rand = "0.8.5"
cfg-if = "1.0.0"
