[package]
name = "tiger"
version = "0.1.0"
authors = ["Hosshii"]
description = "Rust implementation of the first part of \"Modern Compiler Implementation in ML\"."
edition = "2021"
default-run = "tiger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.3.5", features = ["derive"] }
tiger-lib = { path = "../compiler-lib" }
